[project]
name = "dapr-security-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dapr-agents>=0.3.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "logging>=0.4.9.6",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
]
